--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -1,4 +1,4 @@
-name: jaikrishi
+name: leaf_problem_detection
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,11 +23,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+  firebase_storage: ^3.1.6
+  cloud_firestore: ^0.12.9+5
+  firebase_messaging: ^5.0.2
+  
+  image_picker: ^0.6.6+5
+  image_cropper: ^1.2.2
+
+  auto_size_text: ^2.1.0
+  curved_navigation_bar: ^0.3.1
+  country_code_picker: ^1.3.14
+  percent_indicator: ^2.1.1
+  google_maps_flutter: 0.5.28+1
+  permission_handler: ^3.1.0
+  dots_indicator: ^1.1.0
+  geocoder: ^0.2.1
+  location: ^3.0.0 
+  image: ^2.1.12
+  introduction_screen: ^1.0.8
+  youtube_player_flutter: ^7.0.0+3
+  intl: ^0.16.1
+  path_provider: ^1.6.11
+  share: ^0.6.4+3
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +71,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/lpdlogonobg.png
+    - data/en.json
+    - data/hi.json
+    # data/diseases.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
