--- a/jaikrishi/android/app/build.gradle
+++ b/jaikrishi/android/app/build.gradle
@@ -61,5 +61,6 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.google.firebase:firebase-messaging:20.0.0"
+    implementation 'com.android.support:appcompat-v7:25.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
