--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   cloud_firestore: ^0.12.9+5
   firebase_messaging: ^5.0.2
   provider: ^4.1.3
+  image_picker: ^0.6.6+5
+  image_cropper: ^1.2.2
+  permission_handler: ^3.1.0
+  location: ^3.0.0 
+  image: ^2.1.12
+  youtube_player_flutter: ^7.0.0+3
+  path_provider: ^1.6.11
+  share: ^0.6.4+3
+
  
 
 dev_dependencies:
