--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   youtube_player_flutter: ^7.0.0+3
   path_provider: ^1.6.11
   share: ^0.6.4+3
+  google_maps_flutter: 0.5.28+1
+
 
  
 
