--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   path_provider: ^1.6.11
   share: ^0.6.4+3
   google_maps_flutter: 0.5.28+1
-
+  firebase_analytics: ^5.0.16
 
  
 
