--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   auto_size_text: ^2.1.0
   introduction_screen: ^1.0.8
   firebase_analytics: ^5.0.16
+  curved_navigation_bar: ^0.3.1
 
 dev_dependencies:
   flutter_test:
