--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   introduction_screen: ^1.0.8
   firebase_analytics: ^5.0.16
   curved_navigation_bar: ^0.3.1
+  geocoder: ^0.2.1
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
