--- a/lambda/post_upload/requirements.txt
+++ b/lambda/post_upload/requirements.txt
@@ -3,6 +3,7 @@ cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 et-xmlfile==1.0.1
+fastai==1.0.61
 firebase-admin==4.3.0
 google-api-core==1.21.0
 google-api-python-client==1.9.3
@@ -21,7 +22,7 @@ msgpack==1.0.0
 numpy==1.19.0
 openpyxl==3.0.4
 pandas==1.0.5
-Pillow==7.2.0
+Pillow==7.1.2
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
