--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -69,8 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/lpdlogonobg.png
-    - data/en.json
-    - data/hi.json
+    # - data/en.json
+    # - data/hi.json
     - data/keys.json
     # data/diseases.json
   # An image asset can refer to one or more resolution-specific "variants", see
