--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   curved_navigation_bar: ^0.3.1
   geocoder: ^0.2.1
   intl: ^0.16.1
+  dash_chat: ^1.1.14
 
 dev_dependencies:
   flutter_test:
