--- a/jaikrishi/pubspec.yaml
+++ b/jaikrishi/pubspec.yaml
@@ -23,8 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+  # flutter_localizations:
+  #   sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,6 +51,12 @@ dependencies:
   curved_navigation_bar: ^0.3.1
   geocoder: ^0.2.1
   intl: ^0.16.1
+
+  # firebase_core: ^0.7.0
+  # firebase_auth: 0.14.0+5
+  # firebase_storage: 3.1.6
+  # cloud_firestore: 0.12.9+5
+  # firebase_messaging: ^7.0.3
 
 dev_dependencies:
   flutter_test:
