--- a/jaikrishi/android/app/src/main/AndroidManifest.xml
+++ b/jaikrishi/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="JaiKrishi"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
         <meta-data android:name="com.google.android.geo.API_KEY"
                    android:value="AIzaSyCPfXBN9jCj0ymku5v_WjIaT4tqWpSVOaw"/> 
         <activity
